--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
             </div>
           </li>
           <li class="item">
+            <div class="item__name">유전자 검사
+              <div class="no__hover">유전자 검사</div>
+            </div>
+            <div class="item__contents"></div>
+          </li>
+          <li class="item">
             <div class="item__name">은행
               <div class="no__hover">은행</div>
             </div>
