--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="swiper-slide">
             <div class="visual2">
               <div class="visual--container">
-                <h1 class="visual--title"><small>대출 앞에 작아질 때!!</small><br>뱅크샐러드 금융매칭</h1>
+                <h1 class="visual--title"><small>대출 앞에 작아질 때!</small><br>뱅크샐러드 금융매칭</h1>
                 <p class="sub--title">1분만에, 은행 방문 없이, 신용점수 영향 없이</p>
                 <div class="visual--btn">
                   <a href="javascript:void(0)" class="btn btn--violet">내 최저금리 조회하기</a>
