--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>금융을 내 편으로 | 뱅크샐러드</title>
 
+  <!-- 오픈 그래프 -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Banksalad" />
+  <meta property="og:title" content="금융을 내 편으로 | 뱅크샐러드" />
+  <meta property="og:image" content="./images/banksalad_seo.png" />
+
   <!-- RESET -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
 
