--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Banksalad" />
   <meta property="og:title" content="금융을 내 편으로 | 뱅크샐러드" />
-  <meta property="og:image" content="./images/banksalad_seo.png" />
+  <meta property="og:image" src="./images/banksalad_seo.png" />
 
   <!-- RESET -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
