--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:site_name" content="Banksalad" />
   <meta property="og:title" content="금융을 내 편으로 | 뱅크샐러드" />
   <meta property="og:image" content="https://banksalad-clone.netlify.app/images/banksalad_seo.png" />
+    <meta property="og:url" content="https://www.banksalad.com/" />
 
   <!-- RESET -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
