--- a/index.html
+++ b/index.html
@@ -779,9 +779,8 @@
           </li>
         </ul>
         <input type="radio" name="review--tab" class="contents" />
-        <ul class="review--contents">
-          <li>
-          </li>
+        <ul class="review--contents loading--area">
+            <div class="loading"></div>
         </ul>
         <input type="radio" name="review--tab" class="contents" />
         <ul class="review--contents">
@@ -999,7 +998,8 @@
           </li>
         </ul>
         <input type="radio" name="tips--tab" class="contents" />
-        <ul class="tip--contents">
+        <ul class="tip--contents loading--area">
+          <div class="loading"></div>
         </ul>
         <input type="radio" name="tips--tab" class="contents" />
         <ul class="tip--contents">
