--- a/index.html
+++ b/index.html
@@ -1123,60 +1123,57 @@
         <div class="footer--download">
           <a href="javascript:void(0)" class="appstore"></a>
           <a href="javascript:void(0)" class="playstore"></a>
-          <a href="javascript" class="certificate">앱 공식 페이지(공동인증서 센터)</a>
         </div>
       </div>
       <div class="top--right">
         <div class="footer--banksalad">
+          <h4 class="top--right--title">많이 찾는 서비스</h4>
+          <a href="javscript:void(0)" class="top--right--sitelink inline">신용대출 금리 비교 한 번에</a><span class="best--span">BEST</span>
+          <a href="javscript:void(0)" class="top--right--sitelink">신용대출 금리 TOP100</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">주택담보대출 금리 비교 한 번에</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">신용카드 캐시백 이벤트</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">무료 유전자 검사</a>
+        </div>
+        <div class="footer--banksalad">
           <h4 class="top--right--title">뱅크샐러드</h4>
-          <a href="javscript:void(0)" class="top--right--sitelink">뱅크샐러드 블로그</a>
-          <a href="javscript:void(0)" class="top--right--sitelink">뱅크샐러드 채용</a>
-          <a href="javscript:void(0)" class="top--right--sitelink">페이스북 페이지</a>
-        </div>
-        <div class="footer--banksalad">
-          <h4 class="top--right--title">추천메뉴</h4>
-          <a href="javscript:void(0)" class="top--right--sitelink">나의 BEST카드 찾기</a>
-          <a href="javscript:void(0)" class="top--right--sitelink">매거진</a>
-        </div>
-        <div class="footer--banksalad">
-          <h4 class="top--right--title">추천 금융 매거진</h4>
-          <a href="javscript:void(0)" class="top--right--sitelink">2019 최고의 신용카드</a>
-          <a href="javscript:void(0)" class="top--right--sitelink">최고의 신용카드를 고르는 방법</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">채용</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">인스타그램</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">유튜브</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">블로그</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">고객안심센터</a>
         </div>
       </div>
     </div>
     <div class="footer--bottom">
       <ul class="policies">
         <li>
-          <a href="javascript:void(0)">서비스문의</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)">제휴문의</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)">이용약관</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)">오픈뱅킹 이용약관</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)">뱅샐머니 이용약관</a>
+          <a href="javascript:void(0)">공지사항</a>
         </li>
         <li>
           <a href="javascript:void(0)">뱅샐머니 이용안내</a>
         </li>
         <li>
+          <a href="javascript:void(0)">뱅샐머니 이용정지</a>
+        </li>
+        <li>
           <a href="javascript:void(0)">개인정보처리방침</a>
         </li>
         <li>
-          <a href="javascript:void(0)">공지사항</a>
+          <a href="javascript:void(0)">이용약관</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">인증서센터</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">사업제휴</a>
         </li>
       </ul>
       <div class="copyright">
-        <span>© Banksalad Co., Ltd. All rights reserved.</span><br><br>
-        <span>(주)뱅크샐러드  |  대표: 김태훈  |  사업자등록번호: 105-87-73978  |  통신판매업신고: 2017-서울강남-00250</span><br><br>
-        <span>Email: <span class="italic">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108, 43층(여의도동,파크원타워Ⅰ)</span><br><br>
-        <span>뱅크샐러드는 최신 금융 정보를 수집하기 위해 노력하고 있으며 정보 제공에 따른 법적 책임을 지지 않습니다.</span>
+        <span class="copyright--title">(주)뱅크샐러드</span><br />
+        <span>대표: 김태훈 | 사업자등록번호: 105-87-73978 | 통신판매업신고: 2017-서울강남-00250</span><br />
+        <span>E-mail: <span class="underline">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108, 43층(여의도동,파크원타워Ⅰ)</span><br />
+        <span>뱅크샐러드는 최신 금융 정보를 수집하기 위해 노력하고 있으며 정보 제공에 따른 법적 책임을 지지 않습니다.</span><br /><br />
+        <span>© Banksalad Co., Ltd. All rights reserved.</span>
       </div>
     </div>
   </footer>
