Feat: 푸터 메뉴 수정

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         </ul>
         <input type="radio" name="review--tab" class="contents" />
         <ul class="review--contents loading--area">
-            <div class="loading"></div>
+          <div class="loading"></div>
         </ul>
         <input type="radio" name="review--tab" class="contents" />
         <ul class="review--contents">
@@ -1112,7 +1112,8 @@
 
   <!-- CONTACT -->
   <section class="contact">
-    <p>뱅크샐러드는 IBK기업은행 카드 추천 솔루션 제작부터 KT CLiP 앱 카드데이터 제휴까지 다양한 파트너와 협업을 진행했습니다.<br>국내 최대 금융 데이터와 고도화된 금융추천엔진을 통해 사업을 발전시키고 싶다면 언제든 <span class="underline">rainist@rainist.com</span>으로 문의 주세요.</p>
+    <p>뱅크샐러드는 IBK기업은행 카드 추천 솔루션 제작부터 KT CLiP 앱 카드데이터 제휴까지 다양한 파트너와 협업을 진행했습니다.<br>국내 최대 금융 데이터와 고도화된 금융추천엔진을 통해 사업을
+      발전시키고 싶다면 언제든 <span class="underline">rainist@rainist.com</span>으로 문의 주세요.</p>
   </section>
 
   <!-- FOOTER -->
@@ -1128,18 +1129,20 @@
       <div class="top--right">
         <div class="footer--banksalad">
           <h4 class="top--right--title">많이 찾는 서비스</h4>
-          <a href="javscript:void(0)" class="top--right--sitelink inline">신용대출 금리 비교 한 번에</a><span class="best--span">BEST</span>
+          <a href="javscript:void(0)" class="top--right--sitelink inline">신용대출 금리 비교 한 번에</a><span
+            class="best--span">BEST</span>
           <a href="javscript:void(0)" class="top--right--sitelink">신용대출 금리 TOP100</a>
           <a href="javscript:void(0)" class="top--right--sitelink">주택담보대출 금리 비교 한 번에</a>
           <a href="javscript:void(0)" class="top--right--sitelink">신용카드 캐시백 이벤트</a>
           <a href="javscript:void(0)" class="top--right--sitelink">무료 유전자 검사</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">무료 미생물 검사</a>
         </div>
         <div class="footer--banksalad">
           <h4 class="top--right--title">뱅크샐러드</h4>
-          <a href="javscript:void(0)" class="top--right--sitelink">채용</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">회사소개</a>
+          <a href="javscript:void(0)" class="top--right--sitelink">블로그</a>
           <a href="javscript:void(0)" class="top--right--sitelink">인스타그램</a>
           <a href="javscript:void(0)" class="top--right--sitelink">유튜브</a>
-          <a href="javscript:void(0)" class="top--right--sitelink">블로그</a>
           <a href="javscript:void(0)" class="top--right--sitelink">고객안심센터</a>
         </div>
       </div>
@@ -1171,7 +1174,8 @@
       <div class="copyright">
         <span class="copyright--title">(주)뱅크샐러드</span><br />
         <span>대표: 김태훈 | 사업자등록번호: 105-87-73978 | 통신판매업신고: 2017-서울강남-00250</span><br />
-        <span>E-mail: <span class="underline">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108, 43층(여의도동,파크원타워Ⅰ)</span><br />
+        <span>E-mail: <span class="underline">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108,
+          43층(여의도동,파크원타워Ⅰ)</span><br />
         <span>뱅크샐러드는 최신 금융 정보를 수집하기 위해 노력하고 있으며 정보 제공에 따른 법적 책임을 지지 않습니다.</span><br /><br />
         <span>© Banksalad Co., Ltd. All rights reserved.</span>
       </div>
