Feat: copyright 수정

--- a/index.html
+++ b/index.html
@@ -1159,10 +1159,13 @@
           <a href="javascript:void(0)">뱅샐머니 이용정지</a>
         </li>
         <li>
-          <a href="javascript:void(0)">개인정보처리방침</a>
+          <a href="javascript:void(0)" class="text--bold">개인정보처리방침</a>
         </li>
         <li>
           <a href="javascript:void(0)">이용약관</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">전자금융거래이용약관</a>
         </li>
         <li>
           <a href="javascript:void(0)">인증서센터</a>
@@ -1172,11 +1175,13 @@
         </li>
       </ul>
       <div class="copyright">
-        <span class="copyright--title">(주)뱅크샐러드</span><br />
-        <span>대표: 김태훈 | 사업자등록번호: 105-87-73978 | 통신판매업신고: 2017-서울강남-00250</span><br />
-        <span>E-mail: <span class="underline">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108,
-          43층(여의도동,파크원타워Ⅰ)</span><br />
-        <span>뱅크샐러드는 최신 금융 정보를 수집하기 위해 노력하고 있으며 정보 제공에 따른 법적 책임을 지지 않습니다.</span><br /><br />
+        <p class="copyright--title">(주)뱅크샐러드</p>
+        <p>대표: 김태훈 | 사업자등록번호: 105-87-73978 | 통신판매업신고: 2017-서울강남-00250</p>
+        <p>E-mail: <span class="underline">hello@banksalad.com</span> | 주소: 서울특별시 영등포구 여의대로 108,
+          43층(여의도동,파크원타워Ⅰ)</p>
+        <p>뱅크샐러드는 국내 최다 1400여 개 금융상품을 비교하여 누구나 유리한 상품을 선택하도록 돕습니다. 이제 비대면 건강 검사로 모두가 나에게 필요한 건강 솔루션을 선택하도록 자산 관리의 경험을
+          바꿔나가고 있습니다.</p>
+        <p>금융을 넘어 건강 자산까지 뱅크샐러드</p><br />
         <span>© Banksalad Co., Ltd. All rights reserved.</span>
       </div>
     </div>
